@@ -1,5 +1,9 @@
 2002-11-18  Jon K Hellan  <hellan@acm.org>
 
+	* src/io-context-gtk.c (icg_init_gui): I could have sworn...
+
+2002-11-18  Jon K Hellan  <hellan@acm.org>
+
 	* src/workbook-control-gui.c (show_gui): Use window->screen
 	instead of default screen.
 
